# catalogicpp

./: .gitmodules  .travis.yml  CMakeLists.txt  meson.build
include/: Catalogue.h  Catalogue.hpp  CatalogueIO.h  CatalogueIO.hpp  Event.h  Event.hpp  Repository.h  Repository.hpp
tests/Catalogue/: main.cpp
tests/Event/: main.cpp
tests/Json/: main.cpp
tests/Repository/: main.cpp
